--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-sitemap": "5.7",
         "tcg/voyager": "^1.4"
     },
     "require-dev": {
